--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 venv/
+
+# Ignorar arquivos de configuração do IDE
+*.pyc
+__pycache__/
+
+# Ignorar arquivos de log
+*.log
+
+# Ignorar arquivos de cache
+*.pyo
+*.pyd
+
+# Ignorar outros arquivos temporários
+*.DS_Store
